# audify

./: .clang-format  .gitignore  .gitmodules  .npmignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-deploy.yml  build.yml  commit-build.yml  deploy-build.yml  regenerate-docs.yml  setup-build-environment.yml
docs/: documentation.json  globals.html  index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/assets/js/: search.js
docs/classes/: OpusDecoder.html  OpusEncoder.html  RtAudio.html  opusdecoder.html  opusencoder.html  rtaudio.html
docs/enums/: OpusApplication.html  RtAudioApi.html  RtAudioErrorType.html  RtAudioFormat.html  RtAudioStreamFlags.html  opusapplication.html  rtaudioapi.html  rtaudioerrortype.html  rtaudioformat.html  rtaudiostreamflags.html
docs/interfaces/: RtAudioDeviceInfo.html  RtAudioStreamParameters.html  rtaudiodeviceinfo.html  rtaudiostreamparameters.html
scripts/: generate_docs.js
src/: audify.cpp  opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  opus_encoder.h  rt_audio.cpp  rt_audio.h  rt_audio_converter.cpp  rt_audio_converter.h
